<resources>
    <string name="app_name">Films</string>

    <!-- BottomNavigation-->
    <string name="title_watch">Watch</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_feed">Feed</string>
    <string name="title_history">History</string>
    <string name="title_profile">Profile</string>

    <!-- WatchFragment -->
    <string name="watch__tab_layout__film_tab_name">Films</string>
    <string name="watch__tab_layout__show_tab_name">Shows</string>

    <string name="watch__empty_list">Empty list.</string>

    <string name="bad_connection">Bad internet connection.</string>
    <string name="no_connection">No internet connection.</string>

    <!-- FeedFragment -->
    <string name="feed__tab_layout__film_tab_name">Films</string>
    <string name="feed__tab_layout__show_tab_name">Shows</string>

    <string name="feed_name_item">Name</string>
    <string name="feed_year_item">Year</string>

    <!-- ProfileFragment -->
    <string name="profile_username">Username</string>
    <string name="profile_name">Name</string>
    <string name="profile_location">Location</string>

    <string name="profile_facebook">Facebook</string>
    <string name="profile_twitter">Twitter</string>
    <string name="profile_google">Google</string>
    <string name="profile_tumblr">Tumblr</string>
    <string name="profile_medium">Medium</string>
    <string name="profile_slack">Slack</string>
    <string name="profile_apple">Apple</string>
</resources>
