<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_feed">

    <fragment
        android:id="@id/navigation_watch"
        android:name="android.technopolis.films.ui.watch.WatchFragment"
        android:label="@string/title_watch"
        tools:layout="@layout/fragment_watch" />

    <fragment
        android:id="@id/navigation_calendar"
        android:name="android.technopolis.films.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@id/navigation_feed"
        android:name="android.technopolis.films.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@id/navigation_history"
        android:name="android.technopolis.films.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@id/navigation_profile"
        android:name="android.technopolis.films.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>